@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-09T01:14:58Z",
-  "count_outdated" : 1188,
-  "uniques_outdated" : 717,
+  "timestamp" : "2025-01-11T01:15:45Z",
+  "count_outdated" : 1189,
+  "uniques_outdated" : 718,
   "count" : 1194,
   "uniques" : 723,
   "clones" : [
-    {
-      "timestamp": "2024-12-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-29T00:00:00Z",
       "count": 1,
