@@ -1,3 +1,12 @@
+2025-01-11T01:15:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12719779974 # 537
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-11
+* notice: last 14d: unq all: 2 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 717 1188 / 723 1194
+* notice: next accum: outdated-unq outdated-all / unq all: 718 1189 / 723 1194
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-28] / []
+
 2025-01-09T01:14:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12682026500 # 535
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-09
